--- a/Film-Info/src/index.css
+++ b/Film-Info/src/index.css
@@ -10,4 +10,18 @@
   border: 1px solid rgb(83, 71, 71);
   border-radius: 0.5rem;
   box-shadow: 5px 10px 10px 12px rgba(83, 47, 47, 0.5);
+  display: flex;
+}
+.years {
+ background-color: brown;
+ display: flex;
+ flex-direction: column;
+ margin: 5rem 1rem;
+ padding: 4rem;
+ font-size: 1.5rem;
+ height: 250px;
+}
+.year {
+    margin: 0.2rem;
+    cursor: pointer;
 }
