--- a/Film-Info/src/index.css
+++ b/Film-Info/src/index.css
@@ -4,27 +4,58 @@
   box-sizing: border-box;
 }
 .main {
-  margin: 5rem;
+  
+  margin: auto;
+  margin-top: 5rem;
   width: 800px;
   height: 350px;
   border: 1px solid rgb(83, 71, 71);
   border-radius: 0.5rem;
   box-shadow: 5px 10px 10px 12px rgba(83, 47, 47, 0.5);
   display: flex;
+  @media (max-widht) {
+  }
 }
 .years {
-  background-color: brown;
+  color: rgb(95, 15, 15);
   display: flex;
   flex-direction: column;
-  margin: 5rem 1rem;
   padding: 4rem;
-  font-size: 1.5rem;
-  height: 250px;
+  font-size: 2rem;
+  height: 100%;
+  border-right: 1px solid brown;
 }
 .year {
-  margin: 0.2rem;
+  margin: 0.5rem;
   cursor: pointer;
 }
 .filmInfo {
-  background-color: blueviolet;
+  font-size: 1rem;
+  margin: 4rem 2rem;
+  & h1{
+color: blue;
+  }
+  & h3 {
+    color: rgb(156, 6, 6);
+  }
+  & h2 {
+    color: red;
+  }
+  & p{
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .main {
+    flex-direction: column;
+  }
+  .years {
+    display: block;
+    flex-direction: row;
+    padding-bottom: 5px;
+    margin: auto;
+    border-right: none;
+    border-bottom: 1px solid rgb(95, 15, 15);
+    width: 100%;
+  }
 }
